updated some styling

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -16,7 +16,7 @@
 <body>
     <header class="navbar-fixed">
         <nav>
-            <div class="nav-wrapper">
+            <div class="nav-wrapper green">
                 <ul>
                     <li><a href="/" class="left brand-logo">&nbsp;&nbsp;Game Collector</a></li>
                 </ul>
@@ -40,7 +40,7 @@
         {% block content %}
         {% endblock %}
     </main>
-    <footer class="page-footer">
+    <footer class="page-footer green">
         <div class="right">All Rights Reserved, &copy; 2020 Game Collector &nbsp;</div>
     </footer>
 </body>
