--- a/main_app/templates/registration/login.html
+++ b/main_app/templates/registration/login.html
@@ -6,7 +6,7 @@
 <form method="post" action="{% url 'login' %}">
     {% csrf_token %}
     {{ form }}
-    <input type="submit" class="btn" value="login">
+    <input type="submit" class="btn blue" value="login">
     <input type="hidden" name="next" value="{{ next }}">
 </form>
 
